# quarry

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build.sh  run.sh
src/: Connections.cpp  Connections.h  FilePanel.cpp  FilePanel.h  MainFrame.cpp  MainFrame.h  NavIcons.cpp  NavIcons.h  QuadSplitter.cpp  QuadSplitter.h  main.cpp  util.cpp  util.h
